--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-Open_Weather_API_URL = 'https://api.openweathermap.org/data/2.5/onecall?lat='
-Open_Weather_API_Key = '770c17c22dff37637fc3801ca2553323'
+REACT_APP_API_URL = 'https://api.openweathermap.org/data/2.5/onecall?lat='
+REACT_APP_API_KEY = '770c17c22dff37637fc3801ca2553323'
